--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
 # Convex deployment URL - replace with your actual deployment URL
 # Run 'npx convex dev' to get the development URL
-VITE_CONVEX_URL=https://cautious-guanaco-541.convex.cloud
+VITE_CONVEX_URL=https://precious-cricket-778.convex.cloud
 
 # Convex site URL for auth
-CONVEX_SITE_URL=http://localhost:5173
+CONVEX_SITE_URL=http://crm.skinticals.com
 
 # Deployment used by `npx convex dev`
-CONVEX_DEPLOYMENT=dev:cautious-guanaco-541 # team: vly, project: test-db5fd
+CONVEX_DEPLOYMENT=dev:precious-cricket-778 # team: vly, project: test-db5fd
 VITE_VLY_APP_ID="silver-seas-start"
 VITE_VLY_MONITORING_URL="https://runtime-monitoring.vly.ai/runtime-error"
-VITE_WEBHOOK_URL="https://cautious-guanaco-541.convex.site"
+VITE_WEBHOOK_URL="https://precious-cricket-778.convex.site"
