--- a/.env.local
+++ b/.env.local
@@ -1,13 +1,2 @@
-CONVEX_DEPLOYMENT=prod:precious-cricket-778
-VITE_CONVEX_URL=https://precious-cricket-778.convex.cloud
-CONVEX_SITE_URL=https://crm.skinticals.com
-VITE_VLY_APP_ID=silver-seas-start
-VITE_VLY_MONITORING_URL=https://runtime-monitoring.vly.ai/runtime-error
-VITE_WEBHOOK_URL=https://precious-cricket-778.convex.site
-
-# IPSTACK_API_KEY=5324ecb91c711b6a7e2f7350b2066f32
-# NIMBUSIT_API_KEY=https://nimbusit.biz/api/SmsApi/SendSingleApi?UserID
-# RESEND_API_KEY=re_T14k3KHL_9VwoCG2XNAywjSnnmcTmsiPA
-# SITE_URL=http://localhost:5173
-# SMS_API_KEY=https://nimbusit.biz/api/SmsApi/SendSingleApi?UserID
-# VLY_APP_NAME=Cafoli CRM System
+CONVEX_DEPLOYMENT=dev:cautious-guanaco-541
+VITE_CONVEX_URL=https://cautious-guanaco-541.convex.cloud
