--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-CONVEX_DEPLOYMENT=dev:cautious-guanaco-541
-VITE_CONVEX_URL=https://cautious-guanaco-541.convex.cloud
+CONVEX_DEPLOYMENT=dev:precious-cricket-778
+VITE_CONVEX_URL=https://precious-cricket-778.convex.cloud
+VITE_WEBHOOK_URL=https://precious-cricket-778.convex.site
